# ridgeback_ur5_controller

./: .gitignore  .travis.yml  LICENSE  README.md  dependencies.rosinstall  myrviz.rviz
admittance_control/: CMakeLists.txt  package.xml
admittance_control/config/: admittance_params.yaml  admittance_params_real.yaml
admittance_control/include/: AdmittanceController.h
admittance_control/launch/: admittance_controller.launch  admittance_controller_real.launch
admittance_control/src/: AdmittanceController.cpp  admittance_controller_node.cpp  cpr_ee_state_splitter_node.cpp  demonstration_recorder_node.cpp
cartesian_state_msgs/: CMakeLists.txt
cpr_bringup/: CMakeLists.txt  package.xml
cpr_bringup/controllers/: arm_controller_ur5.yaml  joint_state_controller.yaml  ur5_vel_controller.yaml
cpr_bringup/launch/: bringup_cpr.launch  bringup_cpr_sim.launch  cpr_bringup.launch  cpr_world.launch  init_pose_start_controllers.launch  robot_bringup.launch
cpr_bringup/src/: fake_wrench.py  my_velocity_commander.cpp
cpr_bringup/worlds/: bifurcation.world  ridgeback_race.world
cpr_closed_loop_controller/: CMakeLists.txt  package.xml
cpr_closed_loop_controller/include/: CPRClosedLoopController.h
cpr_closed_loop_controller/launch/: cpr_closed_loop_controller.launch
cpr_closed_loop_controller/src/: CPRClosedLoopController.cpp  cpr_closed_loop_controller_node.cpp
cpr_mocap_tracking/: CMakeLists.txt  package.xml
cpr_mocap_tracking/config/: mocap_cpr.yml
cpr_mocap_tracking/include/: ObjectTracker.h
cpr_mocap_tracking/launch/: cpr_object_tracking.launch
cpr_mocap_tracking/src/: ObjectTracker.cpp  (+1 more)
obstacle_avoidance/: CMakeLists.txt  package.xml
ridgeback_controller/: CMakeLists.txt  package.xml
ur5_cartesian_velocity_control/: CMakeLists.txt  package.xml  ur5_cartesian_velocity_control_plugin.xml
ur5_controller/: CMakeLists.txt  package.xml
(+17 files in other folders)
